--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.NotificationApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Theme.NotificationApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Ensure text is visible -->
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:windowBackground">@android:color/white</item>
     </style>
-
-    <style name="Theme.NotificationApp" parent="Base.Theme.NotificationApp" />
 </resources>
